infra/k8s/comments-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-service
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
        - name: comments-service
          image: diogo96/comments-service
---
  apiVersion: v1
  kind: Service
  metadata:
    name: comments-service-srv
  spec:
    selector:
      app: comments-service
    ports:
      - name: comments-service
        protocol: TCP
        port: 4001
        targetPort: 4001
---
  apiVersion: v1
  kind: Service
  metadata:
    name: comments-service-node-port
  spec:
    type: NodePort
    selector:
      app: comments-service
    ports: 
      - name: comments-service
        protocol: TCP
        port: 4001
        targetPort: 4001
