infra/k8s/moderation-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation-service
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
        - name: moderation-service
          image: diogo96/moderation-service
---
  apiVersion: v1
  kind: Service
  metadata:
    name: moderation-service-srv
  spec:
    selector:
      app: moderation-service
    ports:
      - name: moderation-service
        protocol: TCP
        port: 4003
        targetPort: 4003
---
  apiVersion: v1
  kind: Service
  metadata:
    name: moderation-service-node-port
  spec:
    type: NodePort
    selector:
      app: moderation-service
    ports: 
      - name: moderation-service
        protocol: TCP
        port: 4003
        targetPort: 4003
