infra/k8s/posts-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-service
  template:
    metadata:
      labels:
        app: posts-service
    spec:
      containers:
        - name: posts-service
          image: diogo96/posts-service
---
apiVersion: v1
kind: Service
metadata:
  name: posts-service-srv
spec:
  selector:
    app: posts-service
  ports:
    - name: posts-service
      protocol: TCP
      port: 4000
      targetPort: 4000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: posts-service-node-port
# spec:
#   type: NodePort
#   selector:
#     app: posts-service
#   ports:
#     - name: posts-service
#       protocol: TCP
#       port: 4000
#       targetPort: 4000
