infra/k8s/query-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: diogo96/query-service
---
apiVersion: v1
kind: Service
metadata:
  name: query-service-srv
spec:
  selector:
    app: query-service
  ports:
    - name: query-service
      protocol: TCP
      port: 4002
      targetPort: 4002
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: query-service-node-port
# spec:
#   type: NodePort
#   selector:
#     app: query-service
#   ports:
#     - name: query-service
#       protocol: TCP
#       port: 4002
#       targetPort: 4002
